--- a/index.html
+++ b/index.html
@@ -7,175 +7,29 @@
   <body>
 <div class="sticky-nav-sticky-wrapper" class="sticky-wrapper" style="height: 58px;"> == $0
   <div id="sitcky-nav" class="header__wrapper" style="width: 992px;">
-    <header class="site-header showDesktop role="banner">
+    <header class="site-header showDesktop" role="banner">
       <div class="wrapper nav-wrapper"> ==$0
         <div class="nav--desktop">
-          <div class="mobile-wrapper">
-          </div>
           <div class="header-menu nav-wrapper">
             <ul class="main-menu accessibleNav">
-              <li class="grandparent kids-4">
-                <a href="#" class="nav-link" id="Shop">Shop</a>
-                <a href="#" class="nav-carat">
-                  <span class="plus">+</span>
-                  <span class="minus">-</span>
-                </a>
-                <div class="main-menu-dropdown">
-                  <ul class="main-menu-dropdown--list">
-                    <li aria-haspopup="true">
-                      <ul class="collection-nav--child">
-                        <li class="collection-nav--child-link">
-                          <h5>
-                            <a href="/collections/all">All Collections</a>
-                          </h5>
-                        </li>
-                        <li class=collection-nav--child-link">
-                          <h5>
-                            <a href="/collections/new-arrivals">New Arrivals</a>
-                          </h5>
-                        </li>
-                        <li class=collection-nav--child-link">
-                          <h5>
-                            <a href="/collections/bedding">Bedding</a>
-                          </h5>
-                          <ul class="collection-nav--child-link">
-                            <li class="collection-nav--grandchild-link">
-                              <a href="/collections/duvets">Duvets</a>
-                            </li>
-                            <li class="collection-nav--grandchild-link">
-                              <a href="/collections/quilts">Coverlets + Quilts</a>
-                            </li>
-                            <li class="collection-nav--grandchild-link">
-                              <a href="/collections/pillowcases">Pillowcases</a>
-                            </li>
-                            <li class="collection-nav--grandchild-link">
-                              <a href="/collections/sets">Bedding Sets</a>
-                            </li>
-                            <li class="collection-nav--grandchild-link">
-                              <a href="/collections/throws">Throws</a>
-                            </li>
-                            <li class="collection-nav--grandchild-link">
-                              <a href="/collections/headboard-pillows">Headboard Pillows</a>
-                            </li>
-                          </ul>
-                        </li>
-                      </ul>
-                    </li>
-                    <li aria-haspopup="true">
-                      <ul class="collection-nav--child">
-                        <li class="collection-nav--child-link">
-                          <h5>
-                            <a href="/collections/fabric-by-the-yard">Fabric</a>
-                          </h5>
-                          <ul class="collection-nav--grandchild-link">
-                            <li class="collection-nav--grandchild-link">
-                              <a href="/collections/fabric-by-the-yard/Printed">Printed</a>
-                            </li>
-                            <li class="collection-nav--grandchild-link">
-                              <a href="/collections/fabric-by-the-yard/Woven">Woven</a>
-                            </li>
-                            <li class="collection-nav--grandchild-link">
-                              <a href="/collections/embroidered-fabrics">Embroidered</a>
-                            </li>
-                            <li class="collection-nav--grandchild-link">
-                              <a href="/collections/swatch-sets">Swatches</a>
-                            </li>
-                          </ul>
-                        </li>
-                        <li class="collection-nav--child-link>"
-                          <h5>
-                            <a href="/collections/table-linens">Dining</a>
-                          </h5>
-                          <ul class="collection-nav--grandchild">
-                            <li class="collection-nav--grandchild-link">
-                              <a href="/collections/table-linens">Table Linens</a>
-                            </li>
-                          </ul>
-                        </li>
-                      </ul>
-                    </li>
-                    <li aria-haspopup="true">
-                      <ul class="collection-nav--child">
-                        <li class="collection-nav--child-link">
-                          <h5>
-                            <a href="/collections/wallpapers">Wallpaper</a>
-                          </h5>
-                          </li>
-                            <li class="collection-nav--child-link">
-                              <h5>
-                                <a href="/collections/accessories-gift">Accessories + Gifts</a>
-                              </h5>
-                            <ul class="collection-nav--grandchild">
-                              <li class="collection-nav--grandchild-link">
-                              <a href="/products/signed-copy-of-rebecca-atwoods-living-with-pattern">Book</a>
-                            </li>
-                            <li class="collection-nav--grandchild-link">
-                              <a href="/products/gift-cards">Gift Card</a>
-                            </li>
-                            <li class="collection-nav--grandchild-link">
-                              <a href="/collections/pouches">Zip Pouches</a>
-                            </li>
-                            <li class="collection-nav--grandchild-link">
-                              <a href="http://rebeccaatwood.com/apps/giftregistry">Gift Registry</a>
-                            </li>
-                          </ul>
-                        </li>
-                      </ul>
-                    </li>
-                    <li aria-haspopup="true">
-                      <ul class="collection-nav--child">
-                        <li class="collection-nav--child-link">
-                          <h5>
-                            <a href="/collections/pillows">Pillows</a>
-                          </h5>
-                          <li class="collection-nav--grandchild-link">
-                            <a href="/collections/pillows/Hand-Dyed">Hand Dyed</a>
-                          </li>
-                          <li class="collection-nav--grandchild-link">
-                            <a href="/collections/pillows/Printed">Printed</a>
-                          </li>
-                          <li class="collection-nav--grandchild-link">
-                            <a href="/collections/pillows/Woven">Woven</a>
-                          </li>
-                          <li class="collection-nav--grandchild-link">
-                            <a href="/collections/embroidered-pillows/Hand-Embroidered">Embroidered</a>
-                          </li>
-                          <li class="collection-nav--grandchild-link">
-                            <a href="/collections/pillows/pillow-sets">Pillow Sets</a>
-                          </li>
-                          <li class="collection-nav--grandchild-link">
-                            <a href="/products/custom-pillow">Custom</a>
-                          </li>
-                        </ul>
-                      </li>
-                      <li class="collection-nav--child-link">
-                        <h5>
-                          <a href="http://rebeccaatwood.com//collections/sale">Sale</a>
-                        </h5>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-            </li>
+              <li class="child kids-0">
+                <a href="/pages/about-us" class="nav-link" id="About">About</a>
+              </li>
             <li class="child kids-0">
-              <a href="/pages/about-us" class="nav-link" id="About">About</a>
-            </li>
+                <a href="/pages/process" class="nav-link" id="Process">Process</a>
+              </li>
             <li class="child kids-0">
-              <a href="/pages/process" class="nav-link" id="Process">Process</a>
-            </li>
-            <li class="child kids-0">
-              <a href="/blogs/from-the-studio" class="nav-link" id="Blog">Blog</a>
-            </li>
-            <li class="child kids-0">
-              <a href="/pages/book" class="nav-link" id="Book">Book</a>
-            </li>
+                <a href="/blogs/from-the-studio" class="nav-link" id="Blog">Blog</a>
+              </li>
+              <li class="child kids-0">
+                <a href="/pages/book" class="nav-link" id="Book">Book</a>
+              </li>
+              <li class="collection-nav--grandchild-link">
+                <a href="/collections/pillow-sets">Pillow Sets</a>
+              </li>
             <li class="collection-nav--grandchild-link">
-              <a href="/collections/pillow-sets">Pillow Sets</a>
-            </li>
-            <li class="collection-nav--grandchild-link">
-              <a href="/products/custom-pillow">Custom</a>
-            </li>
+                <a href="/products/custom-pillow">Custom</a>
+              </li>
           </ul>
         </li>
         <li class="collection-nav--child-link">
